--- a/getprogram/pom.xml
+++ b/getprogram/pom.xml
@@ -14,23 +14,12 @@
 			<artifactId>selenium-java</artifactId>
 			<version>3.8.1</version>
 		</dependency>
+	<dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.4</version>
+</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.seleniumhq.selenium</groupId> -->
-<!-- 			<artifactId>selenium-chrome-driver</artifactId> -->
-<!-- 			<version>3.8.1</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!--     <groupId>org.seleniumhq.selenium</groupId> -->
-<!--     <artifactId>selenium-remote-driver</artifactId> -->
-<!--     <version>3.8.1</version> -->
-<!-- </dependency> -->
-		
-<!-- <dependency> -->
-<!--     <groupId>commons-io</groupId> -->
-<!--     <artifactId>commons-io</artifactId> -->
-<!--     <version>2.5</version> -->
-<!-- </dependency> -->
 
 	
 
