--- a/getprogram/src/main/resources/driver.properties
+++ b/getprogram/src/main/resources/driver.properties
@@ -1,6 +1,6 @@
 drivername = chrome
 OSname = linux
-gol = https://www.jetbrains.com/go/download/#section=
+gol = https://www.jetbrains.com/go/download/#section
 cli = https://www.jetbrains.com/clion/nextversion/
 php = https://www.jetbrains.com/phpstorm/eap/
 rub = https://www.jetbrains.com/ruby/nextversion/
