--- a/getprogram/pom.xml
+++ b/getprogram/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ua.roman</groupId>
 	<artifactId>getprogram</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>GetProgram</name>
+	<packaging>jar</packaging>
 
 
 
@@ -19,12 +19,34 @@
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
 </dependency>
-
-
-	
-
 	</dependencies>
 
+<build>
 
+ <finalName>GetProgram</finalName>
 
+    <plugins>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+        <archive>
+          <manifest>
+            <mainClass>getprogram.IDEALoader</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+    </plugins>
+</build>
 </project>
