--- a/getprogram/pom.xml
+++ b/getprogram/pom.xml
@@ -6,7 +6,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
 	<dependencies>
 		<dependency>
@@ -19,7 +22,19 @@
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
 </dependency>
+
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.25</version>
+</dependency>
+   <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.5</version>
+    </dependency>
 	</dependencies>
+
 
 <build>
 
